[project]
name = "app-poetry-0207"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuriy Filipkov",email = "yuriyfilipkov@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
